[Fix] Adjusts top margin on mobile screens for coffee-run-info

--- a/client/styles/scss/pages/coffeeOrder.scss
+++ b/client/styles/scss/pages/coffeeOrder.scss
@@ -43,3 +43,11 @@
   text-align:center;
   color:$primary-color;
 }
+
+
+/* removes margin that vertically centers coffeeruninfobox */
+@media (max-width: 980px) {
+  .coffee-run-info {
+    margin:20px auto 30px auto;
+  }
+}
